<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          android:showAsAction="never" />
    <item android:id="@+id/action_upload"
          android:title="@string/action_upload"
          android:orderInCategory="101"
          android:showAsAction="never"
          android:visible="false" />
    <item android:id="@+id/action_download"
          android:title="@string/action_download"
          android:orderInCategory="102"
          android:showAsAction="never"
          android:visible="false" />
    <item android:id="@+id/action_add"
          android:title="@string/action_add"
          android:icon="@android:drawable/ic_menu_add"
          android:showAsAction="always" />
    <item android:id="@+id/action_edit"
          android:title="@string/action_edit"
          android:icon="@android:drawable/ic_menu_edit"
          android:showAsAction="always" />
    <item android:id="@+id/action_remove"
          android:title="@string/action_remove"
          android:icon="@android:drawable/ic_menu_delete"
          android:showAsAction="always" />

</menu>
